# learn-morse-code-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: admin.py  cookies.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_auth.py  test_profile.py  test_smoke.py
apps/lessons/: admin.py  models.py  serializers.py  urls.py  views.py
apps/lessons/migrations/: 0001_initial.py  0002_seed_lessons.py  0003_lesson_characters.py
apps/lessons/tests/: test_lessons.py
apps/morse/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/morse/migrations/: 0001_initial.py  0002_seed_allowed_keys.py  0003_morsecharacter.py  0004_seed_morse_characters.py
apps/morse/tests/: test_characters.py  test_settings.py
apps/practice/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/practice/migrations/: 0001_initial.py
apps/practice/tests/: test_history.py
apps/statistics/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/statistics/migrations/: 0001_initial.py
apps/statistics/tests/: test_statistics.py
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/accounts/: models.py  serializers.py  tests.py  urls.py
backend/config/: settings.py  urls.py
config/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
config/tests/: test_docs.py  test_security.py
docs/: ARCHITECTURE.md
(+1 files in other folders)
